--- a/43-h/43-h.htm
+++ b/43-h/43-h.htm
@@ -168,7 +168,7 @@ It chanced on one of these rambles that their way led them down a by-street in
 a busy quarter of London. The street was small and what is called quiet, but it
 drove a thriving trade on the weekdays. The inhabitants were all doing well, it
 seemed and all emulously hoping to do better still, and laying out the surplus
-of their grains in coquetry; so that the shop fronts stood along that
+of their gains in coquetry; so that the shop fronts stood along that
 thoroughfare with an air of invitation, like rows of smiling saleswomen. Even
 on Sunday, when it veiled its more florid charms and lay comparatively empty of
 passage, the street shone out in contrast to its dingy neighbourhood, like a
