--- a/43-h/43-h.htm
+++ b/43-h/43-h.htm
@@ -226,7 +226,7 @@ there was already quite a group about the screaming child. He was perfectly
 cool and made no resistance, but gave me one look, so ugly that it brought out
 the sweat on me like running. The people who had turned out were the
 girl&rsquo;s own family; and pretty soon, the doctor, for whom she had been
-sent put in his appearance. Well, the child was not much the worse, more
+sent, put in his appearance. Well, the child was not much the worse, more
 frightened, according to the sawbones; and there you might have supposed would
 be an end to it. But there was one curious circumstance. I had taken a loathing
 to my gentleman at first sight. So had the child&rsquo;s family, which was only
@@ -626,7 +626,7 @@ Utterson. &ldquo;It may be useful.&rdquo;
 </p>
 
 <p>
-&ldquo;Yes,&rdquo; returned Mr. Hyde, &ldquo;It is as well we have met; and
+&ldquo;Yes,&rdquo; returned Mr. Hyde, &ldquo;it is as well we have met; and
 <i>à propos</i>, you should have my address.&rdquo; And he gave a number of a
 street in Soho.
 </p>
